--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,85 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand"
+      rel="stylesheet"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>The diary of romantic ideas</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script>
+      $(function() {
+        var sldr = $(".sldr"),
+          sldrContent = sldr.html(),
+          slideWidth = $(".sl_ctr").outerWidth(),
+          slideCount = $(".sldr img").length,
+          prv_b = $(".prv_b"),
+          nxt_b = $(".nxt_b"),
+          sldrInterval = 5000,
+          animateTime = 3000,
+          course = 1,
+          margin = -slideWidth;
+        $(".sldr img:last")
+          .clone()
+          .prependTo(".sldr");
+        $(".sldr img")
+          .eq(1)
+          .clone()
+          .appendTo(".sldr");
+        $(".sldr").css("margin-left", -slideWidth);
+        function nxt_bSlide() {
+          interval = window.setInterval(animate, sldrInterval);
+        }
+        function animate() {
+          if (margin == -slideCount * slideWidth - slideWidth) {
+            sldr.css({ marginLeft: -slideWidth });
+            margin = -slideWidth * 2;
+          } else if (margin == 0 && course == -1) {
+            sldr.css({ marginLeft: -slideWidth * slideCount });
+            margin = -slideWidth * slideCount + slideWidth;
+          } else {
+            margin = margin - slideWidth * course;
+          }
+          sldr.animate({ marginLeft: margin }, animateTime);
+        }
+        function sldrStop() {
+          window.clearInterval(interval);
+        }
+        prv_b.click(function() {
+          if (sldr.is(":animated")) {
+            return false;
+          }
+          var course2 = course;
+          course = -1;
+          animate();
+          course = course2;
+        });
+        nxt_b.click(function() {
+          if (sldr.is(":animated")) {
+            return false;
+          }
+          var course2 = course;
+          course = 1;
+          animate();
+          course = course2;
+        });
+        sldr
+          .add(nxt_b)
+          .add(prv_b)
+          .hover(function() {
+            sldrStop();
+          }, nxt_bSlide);
+        nxt_bSlide();
+      });
+    </script>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
