--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>The diary of romantic ideas</title>
+    <title>Some Page</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script>
@@ -23,7 +23,7 @@
           slideCount = $(".sldr img").length,
           prv_b = $(".prv_b"),
           nxt_b = $(".nxt_b"),
-          sldrInterval = 5000,
+          sldrInterval = 6000,
           animateTime = 3000,
           course = 1,
           margin = -slideWidth;
