--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="author" content="Mariya Kapiturko">
+    <meta name="description" content="">
+
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Quicksand"
-      rel="stylesheet"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <title>Some Page</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <!-- Слайдер -->
     <script>
       $(function() {
         var sldr = $(".sldr"),
@@ -86,4 +86,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  
 </html>
