--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,13 @@
 
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+  <link rel="stylesheet" type="text/css" charset="UTF-8"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
 
   <title>Some Page</title>
 
@@ -24,48 +27,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
-<!-- <script>
 
-  const more = document.querySelector(".more"),
-      modal = document.querySelector(".modal"),
-      videos = document.querySelectorAll(".videos__item");
-
-const data = [
-  ['img/thumb_3.webp', 'img/thumb_4.webp', 'img/thumb_5.webp'],
-  ['#3 Верстка на flexbox CSS | Блок преимущества и галерея | Марафон верстки | Артем Исламов',
-      '#2 Установка spikmi и работа с ветками на Github | Марафон вёрстки  Урок 2',
-      '#1 Верстка реального заказа landing Page | Марафон вёрстки | Артём Исламов'],
-  ['3,6 тыс. просмотров', '4,2 тыс. просмотров', '28 тыс. просмотров'],
-   ['X9SmcY3lM-U', '7BvHoh0BrMw', 'mC8JW_aG2EM']];
-   
-
-more.addEventListener("click", () => {
-const videosWrapper = document.querySelector(".videos__wrapper");
- more.remove();
-
-for (let i = 0; i < data[0].length; i++) {
-     let card = document.createElement("a");
-
-     card.classList.add("videos__item", "videos__item-active");
-    card.setAttribute("data-url", data[3][i]);
-
-    card.innerHTML = `
-         <img src="${data[0][i]}" alt="thumb">
-        <div class="videos__item-descr">
-            ${data[1][i]}
-        </div>
-        <div class="videos__item-views">
-            ${data[2][i]}
-        </div>
-    `;
-
-    videosWrapper.appendChild(card);
-    setTimeout(() => {
-        card.classList.remove("videos__item-active");
-    }, 10);
-  }
-});
-</script> -->
 </body>
 
 </html>
